--- a/project_LW1/CSS/styleDesc.css
+++ b/project_LW1/CSS/styleDesc.css
@@ -4,30 +4,32 @@
 
 h1, h2, h3 {
     text-align: center;
-    
+    text-decoration: underline;
 }
 h1 {
     font-size: 24px;
 }
 
 h2 {
-    text-decoration: underline;
-    color:red;
+    
     font-size: 22px;
 }
 
 h3 {
     font-size: 20px;
+    
 }
 
 #we {
     display: block;
-    width: 200px;
+    width: 145px;
     margin: auto;
+    border: 3px solid black;
+    padding: 20px;
+    background-color: rgb(224, 146, 255);
 }
 
 .authors {
-    text-align: center;
     font-style: italic;
 }
 .strong {
@@ -35,12 +37,19 @@ h3 {
     font-size:large;
 }
 
+.underline {
+    text-decoration: underline;
+}
+
 .description {
     display: block;
     position: relative;
     width: 1000px;
     margin: auto;
+    border: 3px solid black;
+    padding: 20px;
+    background-color: rgb(224, 146, 255);
 }
 body {
-    background-color: rgb(202, 187, 187);
+    background-color: rgb(158, 59, 197);
 }
