--- a/zvit/css/style.css
+++ b/zvit/css/style.css
@@ -74,16 +74,23 @@ figcaption{
     cursor: pointer;
 }
 .main{
+    position: relative;
+    display: inline-block;
     background-color:violet;
     height: 800px;
+    width: 1000px;
 }
 .main .vertical{
+    display: inline-block;
+    position: relative;
     width: 200px;
+    height: 200px;
+    margin-top: 50px;
 }
 .main .vertical .vertical_area{
-    margin-top: 30px;
+    border-radius:20%;
     background-color:yellow;
-    height: 30px;
+    height: 50px;
     margin-bottom: 50px;
 }
 .list{
