--- a/project_LW1/CSS/style.css
+++ b/project_LW1/CSS/style.css
@@ -10,23 +10,30 @@ h1 {
 body {
     background-color: rgb(224, 238, 221);
 }
+.menu {
+    width: 300px;
+}
+.mainmain {
+    display: flex;
+    flex-direction: row;
+}
+.main {
+    width: 1100px;
+    display: flex;
+    flex-direction: column;
+}
 
 .navigationMenu {
     padding: 10px;
     border: 3px solid black;
     background-color: pink;
-    display: block;
     position: fixed;
-    margin: 40px;
+    
     text-decoration: underline;
 }
 .fishBox {
-    display: block;
+
     padding: 15px;
-    position: relative;
-    width: 1100px;
-    right: 40px;
-    left: 300px;
 }
 #we {
     display: block;
@@ -54,35 +61,32 @@ td {
 }
 
 .myTable {
-    display: block;
-    position: relative;
+   
+    padding: 15px;
+    
+}
+.picnform{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    
     padding: 15px;
     right: 40px;
     left: 300px;
 }
+
 .wellcome{
-    display: inline-block;
-    position: absolute;
+    
     left: 500px;
-    margin: 10px;
+    margin: 0 px;
     border: 3px solid black;
 }
 #wellcomepic{
     width: 310px;
 }
 
-.picnform{
-    display: inline-block;
-    position: relative;
-    width: 1700px;
-    padding: 15px;
-    right: 40px;
-    left: 300px;
-}
+
 form {
-    top: 10px;
-    display: inline-block;
-    position: relative;
     border: 3px solid black;
     padding: 15px;
     right: 40px;
