vladm747 full lab + fix

--- a/LAB_6/Vladyslav Moroz/Task2_lab6/Pages/Form.cshtml
+++ b/LAB_6/Vladyslav Moroz/Task2_lab6/Pages/Form.cshtml
@@ -39,11 +39,13 @@
   
 
 @{
+    <br>
+    <br>
      <text>
               You entered: <br />
-              Company Name: @Model.firstname <br />
-              Contact Name: @Model.lastname <br />
-              Employee Count: @Model.password <br />
+              First Name: @Model.firstname <br />
+              Last Name: @Model.lastname <br />
+              Password: @Model.password <br />
    </text>
 }
   
