--- a/ReportOf_SixthGroup/Views/Lab3/MaketLook.cshtml
+++ b/ReportOf_SixthGroup/Views/Lab3/MaketLook.cshtml
@@ -5,13 +5,15 @@
         <div class="grid-container">
             <a href="~/Lab3/Theme" class="lab_link"><div class="grid-item">Тема Мета Розташування Звіту, Сайту</div></a>
             <a href="~/Lab3/MaketLook" class="lab_link"><div class="grid-item">Зовнішній вигляд макету</div></a>
-            <a href="~/Lab3/MaketTable" class="lab_link"><div class="grid-item">Html - код макету - талиця</div></a>
+            <a href="~/Lab3/MaketTable" class="lab_link"><div class="grid-item">Html - код макету - таблиця</div></a>
             <a href="~/Lab3/MaketFlex" class="lab_link"><div class="grid-item">Html - код макету - плаваючі блоки</div></a>
             <a href="~/Lab3/TaskHtml" class="lab_link"><div class="grid-item">HTML - код сторінки завдання</div></a>
             <a href="~/Lab3/TaskCss" class="lab_link"><div class="grid-item">CSS - код сторінки завдання</div></a>
             <a href="~/Lab3/End" class="lab_link"><div class="grid-item">Висновки</div></a>
         </div>
     </div>
-
+    <div>
+        <img style="width: 1200px; height:1700px;" src="~/Content/img/MaketLookImg.png" alt="Alternate Text" />
+    </div>
 
 </main>
