--- a/ReportOf_SixthGroup/Views/Lab3/TaskHtml.cshtml
+++ b/ReportOf_SixthGroup/Views/Lab3/TaskHtml.cshtml
@@ -5,7 +5,7 @@
         <div class="grid-container">
             <a href="~/Lab3/Theme" class="lab_link"><div class="grid-item">Тема Мета Розташування Звіту, Сайту</div></a>
             <a href="~/Lab3/MaketLook" class="lab_link"><div class="grid-item">Зовнішній вигляд макету</div></a>
-            <a href="~/Lab3/MaketTable" class="lab_link"><div class="grid-item">Html - код макету - талиця</div></a>
+            <a href="~/Lab3/MaketTable" class="lab_link"><div class="grid-item">Html - код макету - таблиця</div></a>
             <a href="~/Lab3/MaketFlex" class="lab_link"><div class="grid-item">Html - код макету - плаваючі блоки</div></a>
             <a href="~/Lab3/TaskHtml" class="lab_link"><div class="grid-item">HTML - код сторінки завдання</div></a>
             <a href="~/Lab3/TaskCss" class="lab_link"><div class="grid-item">CSS - код сторінки завдання</div></a>
@@ -13,5 +13,8 @@
         </div>
     </div>
 
+    <div>
+        <img src="~/Content/img/MaketTableImg4.png" alt="Alternate Text" />
+    </div>
 
 </main>
