--- a/ReportOf_SixthGroup/Views/Lab3/Theme.cshtml
+++ b/ReportOf_SixthGroup/Views/Lab3/Theme.cshtml
@@ -5,11 +5,36 @@
         <div class="grid-container">
             <a href="~/Lab3/Theme" class="lab_link"><div class="grid-item">Тема Мета Розташування Звіту, Сайту</div></a>
             <a href="~/Lab3/MaketLook" class="lab_link"><div class="grid-item">Зовнішній вигляд макету</div></a>
-            <a href="~/Lab3/MaketTable" class="lab_link"><div class="grid-item">Html - код макету - талиця</div></a>
+            <a href="~/Lab3/MaketTable" class="lab_link"><div class="grid-item">Html - код макету - таблиця</div></a>
             <a href="~/Lab3/MaketFlex" class="lab_link"><div class="grid-item">Html - код макету - плаваючі блоки</div></a>
             <a href="~/Lab3/TaskHtml" class="lab_link"><div class="grid-item">HTML - код сторінки завдання</div></a>
             <a href="~/Lab3/TaskCss" class="lab_link"><div class="grid-item">CSS - код сторінки завдання</div></a>
             <a href="~/Lab3/End" class="lab_link"><div class="grid-item">Висновки</div></a>
+        </div>
+    </div>
+
+    <div style="text-align: center">
+        <div class="main_area">
+            <div style="
+            max-width: 1000px;
+            margin-left:50px;
+            background-color: #dcd4d4;
+            font-size: 20px;
+            border: 3px solid black;
+            ">
+                <h1 style="text-decoration: underline;">ТЕМА:</h1>
+                <p>
+                    СТРУКТУРА HTML-ДОКУМЕНТА. ВИБІР ПРЕДМЕТНОГО ГАЛУЗІ.
+                    РОБОТА З ПОСИЛАННЯМИ, ТАБЛИЦЯМИ, ЗОБРАЖЕННЯМИ, ФОРМАМИ в HTML-ДОКУМЕНТІ.
+                </p>
+                <h1 style="text-decoration: underline;">МЕТА:</h1>
+                <p>
+                    придбати практичні навички роботи  з HTML-документом, таблицями,формами, зображеннями, посиланнями.
+                    Створити шаблон звітного HTML-документом для відображення результатів роботи всіх лабораторних робіт.
+                </p>
+                <h1 style="text-decoration: underline;">РОЗТАШУВАННЯ:</h1>
+                <p><a href="https://github.com/KurtC0bain/KPI_WEB" target="_blank">github.com/KurtC0bain/KPI_WEB</a></p>
+            </div>
         </div>
     </div>
 
