--- a/ReportOf_SixthGroup/Views/Lab4/Array.cshtml
+++ b/ReportOf_SixthGroup/Views/Lab4/Array.cshtml
@@ -9,6 +9,17 @@
             <a href="~/Lab4/End" class="lab_link"><div class="grid-item">Висновки</div></a>
         </div>
     </div>
+    <div style="display:flex; flex-wrap: wrap;">
+        <div>
+            <h1>Pishchuk Maxym</h1> <br /> <img src="~/Content/img/lab4MaxArrays.png" alt="Alternate Text" />
+        </div>
 
+        <div>
+        <h1>Moroz Vladyslav</h1> <br /> <img src="~/Content/img/lab4VladArrays.png" alt="Alternate Text" /> 
+        </div>
 
+        <div>
+        <h1>Tereshchenko Bohdan</h1> <br /> <img src="~/Content/img/lab4BohdanArrays1.png" alt="Alternate Text" />
+        </div>
+    </div>
 </main>
