--- a/ReportOf_SixthGroup/Views/Lab4/Sixth.cshtml
+++ b/ReportOf_SixthGroup/Views/Lab4/Sixth.cshtml
@@ -10,5 +10,19 @@
         </div>
     </div>
 
+    <div style="display:flex; flex-wrap: wrap;">
+        <div>
+            <h1>Pishchuk Maxym</h1> <br /> <img src="~/Content/img/lab4MaxSixth.png" alt="Alternate Text" />
+        </div>
+
+        <div>
+            <h1>Moroz Vladyslav</h1> <br /> <img src="~/Content/img/lab4VladSixth.png" alt="Alternate Text" />
+        </div>
+
+        <div>
+            <h1>Tereshchenko Bohdan</h1> <br /> <img src="~/Content/img/lab4BohdanSixth.png" alt="Alternate Text" />
+        </div>
+    </div>
+
 
 </main>
