--- a/ReportOf_SixthGroup/Views/Lab5/Gallery.cshtml
+++ b/ReportOf_SixthGroup/Views/Lab5/Gallery.cshtml
@@ -13,5 +13,18 @@
         </div>
     </div>
 
+    <div style="display:flex; flex-wrap: wrap;">
+        <div>
+            <h1>Pishchuk Maxym</h1> <br /> <img src="~/Content/img/lab5MaxGallery.png" alt="Alternate Text" />
+        </div>
+
+        <div>
+            <h1>Moroz Vladyslav</h1> <br /> <img src="~/Content/img/lab5VladGallery.png" alt="Alternate Text" />
+        </div>
+
+        <div>
+            <h1>Tereshchenko Bohdan</h1> <br /> <img src="~/Content/img/lab5BohdanGallery.png" alt="Alternate Text" />
+        </div>
+    </div>
 
 </main>
