--- a/ReportOf_SixthGroup/Views/Lab5/Socials.cshtml
+++ b/ReportOf_SixthGroup/Views/Lab5/Socials.cshtml
@@ -13,5 +13,18 @@
         </div>
     </div>
 
+    <div style="display:flex; flex-wrap: wrap;">
+        <div>
+            <h1>Pishchuk Maxym</h1> <br /> <img src="~/Content/img/lab5MaxSocials.png" alt="Alternate Text" />
+        </div>
+
+        <div>
+            <h1>Moroz Vladyslav</h1> <br /> <img src="~/Content/img/lab5VladSocials.png" alt="Alternate Text" />
+        </div>
+
+        <div>
+            <h1>Tereshchenko Bohdan</h1> <br /> <img src="~/Content/img/lab5BohdanSocials.png" alt="Alternate Text" />
+        </div>
+    </div>
 
 </main>
