--- a/ReportOf_SixthGroup/Views/Lab6/Form.cshtml
+++ b/ReportOf_SixthGroup/Views/Lab6/Form.cshtml
@@ -12,5 +12,10 @@
         </div>
     </div>
 
+    <div>
+        <img src="~/Content/img/lab6Form1.png" alt="Alternate Text" style="width:1500px; height:850px; "/>
+        <img src="~/Content/img/lab6Form2.png" alt="Alternate Text" style="width:1500px; height:850px; "/>
+        <img src="~/Content/img/lab6Form3.png" alt="Alternate Text" style="width:1500px; height:850px; "/>
+    </div>
 
 </main>
