--- a/ReportOf_SixthGroup/Views/Lab6/Server.cshtml
+++ b/ReportOf_SixthGroup/Views/Lab6/Server.cshtml
@@ -12,5 +12,11 @@
         </div>
     </div>
 
+    <div>
+        <img src="~/Content/img/lab6Setting.png" alt="Alternate Text" />
+        <img src="~/Content/img/lab6Setting2.png" alt="Alternate Text" />
+        <img src="~/Content/img/lab6Setting3.png" alt="Alternate Text" />
+        <img src="~/Content/img/lab6Publish.png" alt="Alternate Text" />
+    </div>
 
 </main>
