--- a/ReportOf_SixthGroup/Views/Lab6/Show.cshtml
+++ b/ReportOf_SixthGroup/Views/Lab6/Show.cshtml
@@ -12,5 +12,8 @@
         </div>
     </div>
 
+    <div>
+        <img src="~/Content/img/lab6Show.png" alt="Alternate Text" />
+    </div>
 
 </main>
