--- a/ReportOf_SixthGroup/Views/Lab6/Theme.cshtml
+++ b/ReportOf_SixthGroup/Views/Lab6/Theme.cshtml
@@ -12,5 +12,44 @@
         </div>
     </div>
 
+    <div style="font-size:30px;">
+        <p>
+            Тема WEB-СЕРВЕРИ ТА ПРИНЦИПИ ЇХ РОБОТИ З КОРИСТУВАЧЕМ.
+            СЕРВЕРНІ WEB-ЗАСТОСУВАННЯ.<br /><br />
+
+            Мета: придбати практичні навички встановлення та конфігурування WEB-сервера, встановлення та налаштування Apache<br /><br />
+
+            ХІД ВИКОНАННЯ РОБОТИ<br /><br />
+
+            У звітному HTML-документі розмістити  тему та  мету  лабораторної роботи №6, посилання на ГітХаб<br /><br />
+
+            <ul>
+                <li>
+                    Користуючись документацією бібліотеки https://jqueryui.com/  додати до сайту 3 динамічних елементи на свій розсуд	 (елементи не повинні повторюватись з ла би 5)
+                </li>
+                <li>
+                    Вибрати емулятор WEB-серверу за власним бажанням.Створити WEB-вузол на комп’ютер. (Як один із прикладів встановлення  - дивитись далі).
+                </li>
+                <li>
+                    У звітному HTML-документі детально розписати послідовність установки WEB-серверу зі скріншотами.
+                </li>
+                <li>
+                    На WEB-вузол завантажити всі HTML-документі. Звернулись до них з запитом для перегляду.
+                </li>
+                <li>
+                    Перейменувати розширення .html на   .php . Відкрити і з’ясувати, що інформація відображається на екрані.
+                </li>
+                <li>
+                    Визначити для файлів вузла  кодировку utf-8  у самих  файлах (meta - charset), в httpd.conf (apache), php.ini.
+                </li>
+                <li>
+                    Перевірити коректність відображення інформації.
+                </li>
+                <li>
+                    Для форми зворотнього зв’язку відобразити  ( на відправку повідомлення) інформацію, що повідомлення отримано. Також відобразити  дату.
+                </li>
+            </ul>
+        </p>
+    </div>
 
 </main>
