--- a/ReportOf_SixthGroup/Views/Lab7/Theme.cshtml
+++ b/ReportOf_SixthGroup/Views/Lab7/Theme.cshtml
@@ -6,7 +6,7 @@
             <a href="~/Lab7/Theme" class="lab_link"><div class="grid-item">Постановка задачі</div></a>
             <a href="~/Lab7/Objects" class="lab_link"><div class="grid-item">Опис об'єктів</div></a>
             <a href="~/Lab7/InfoModel" class="lab_link"><div class="grid-item">Інфологічна модель</div></a>
-            <a href="~/Lab7/DatoModel" class="lab_link"><div class="grid-item">Датологічна модель</div></a>
+
             <a href="~/Lab7/Realization" class="lab_link"><div class="grid-item">Реалізація БД</div></a>
             <a href="~/Lab7/DB" class="lab_link"><div class="grid-item">Операції з БД</div></a>
             <a href="~/Lab7/End" class="lab_link"><div class="grid-item">Висновки</div></a>
@@ -14,5 +14,34 @@
         </div>
     </div>
 
+    <div style="font-size: 30px;">
+        ЛАБОРАТОРНА РОБОТА №7 <br /><br />
+
+        Тема: ВЗАЄМОДІЯ WEB-ЗАСТОСУВАНЬ З СИСТЕМОЮ КЕРУВАННЯ БАЗАМИ ДАНИХ (СКБД). ОБРОБКА РЕЗУЛЬТАТІВ SQL-ЗАПИТІВ У PHP-СЦЕНАРІЇ.<br /><br />
+
+        Мета: придбати практичні навички підключення до СКБД, вибору бази даних, виконання запиту, отримання результатів, відключення від СКБД<br /><br />
+                                                                                                                                                    <ul>
+                                                                                                                                                        <li>
+               У звітному HTML-документі розмістити  тему та  постановку задачі лабораторної роботи №7.
+           </li>
+                                                                                                                                                        <li>
+               Завантажити ПК «Денвер» або «Open Server» або  той програмний комплекс, який був встановлений на попередній лабораторній роботі
+           </li>
+                                                                                                                                                        <li>        Відповідно до варіанту індивідуального завдання Таблиці №1  (номер варіанта відповідає останній цифрі студента у списку групи, наприклад, студент 18 за списком – буде виконувати 8 варіант) потрібно:
+        визначити класи об’єктів предметної області, дані  які будуть зберігатися у БД;
+        створити інфологічну модель;
+        нормалізувати реляційну базу та перейти до даталогічної моделі;
+            </li>
+                                                                                                                                                        <li>
+                                                                                                                                                            Для прискорення та полегшеdння розробки інфологічної моделі , яка містить таблиці і зв'язки між ними, рекомендовано встановити програму MySQL Workbench.
+                                                                                                                                                        </li>
+                                                                                                                                                        <li>
+                                                                                                                                                            Реалізувати БД в СУБД MySQL використовуючи веб-інтерфейс для роботи із сервером MySQL phpMyAdmin.
+                                                                                                                                                        </li>
+                                                                                                                                                        <li>
+                                                                                                                                                            Написати скрипти на PHP виведення даних на екран та для сортування даних в БД.
+                                                                                                                                                        </li>
+                                                                                                                                                    </ul>
+    </div>
 
 </main>
