--- a/ReportOf_SixthGroup/Views/Lab4/Theme.cshtml
+++ b/ReportOf_SixthGroup/Views/Lab4/Theme.cshtml
@@ -10,5 +10,46 @@
         </div>
     </div>
 
+    <div>
+        <h1>Постановка</h1>
+        <p style="font-size:25px;">
+            Тема:  ФУНКЦІОНАЛЬНЕ ЗАСТОСУВАННЯ JAVASCRIPT У HTML-ДОКУМЕНТІ.
+            КЛАСИ,ОБ’ЄКТИ, ФУНКЦІЇ,  В МОВІ JAVASCRIPT. ПОДІЇ ТА ОБРОБКА ПОДІЙ.
+            ПРОГРАМНА ВЗАЄМОДІЯ З HTML ДОКУМЕНТАМИ НА ОСНОВІ DOM АРІ<br /><br />
+
+
+            Мета: придбати практичні навички роботи маніпулювання інформаційним вмістом Web-документа засобами мови JavaScript, використання об’єктів,масивів, функцій, подій, обробників подій у сценаріях на мові JavaScript<br /><br />
+
+
+            ХІД ВИКОНАННЯ РОБОТИ<br /><br />
+
+            У звітному HTML-документі розмістити  тему та  постановку задачі лабораторної роботи №4.
+
+
+            У власному сайті або на окремій WEB-сторінці, використовуючи функції , застосувати  3 способи функціонального застосування JavaScript:
+
+            <ul style="font-size:25px">
+                <li>
+                    гіпертекстове посилання (схема URL);
+                </li>
+                <li>
+                    обробник події (handler);
+                </li>
+                <li>
+                    вставка (тег SCRIPT).
+                </li>
+            </ul>
+
+        </p>
+
+
+        <p style="font-size:25px;">Розмістити результати виконання  та програмний код 2 пункту у звітному HTML-документі, записавши назви файлів HTML-документів.</p>
+        
+        <p style="font-size:25px;">
+            Використовуючи сценарій на JavaScript, виконати завдання. яке приведене у Таблиці №1. Кожному студенту виконати своє завдання. Номер варіанта відповідає останній цифрі студента у списку групи. Наприклад, Студент 18 за списком – буде виконувати 8 варіант
+        </p>
+
+    </div>
+
 
 </main>
