--- a/ReportOf_SixthGroup/Views/Lab7/DB.cshtml
+++ b/ReportOf_SixthGroup/Views/Lab7/DB.cshtml
@@ -6,11 +6,26 @@
             <a href="~/Lab7/Theme" class="lab_link"><div class="grid-item">Постановка задачі</div></a>
             <a href="~/Lab7/Objects" class="lab_link"><div class="grid-item">Опис об'єктів</div></a>
             <a href="~/Lab7/InfoModel" class="lab_link"><div class="grid-item">Інфологічна модель</div></a>
-            <a href="~/Lab7/DatoModel" class="lab_link"><div class="grid-item">Датологічна модель</div></a>
+
             <a href="~/Lab7/Realization" class="lab_link"><div class="grid-item">Реалізація БД</div></a>
             <a href="~/Lab7/DB" class="lab_link"><div class="grid-item">Операції з БД</div></a>
             <a href="~/Lab7/End" class="lab_link"><div class="grid-item">Висновки</div></a>
 
+        </div>
+    </div>
+
+    <div style="display:flex; flex-wrap: wrap;">
+        <div>
+            <h1>Pishchuk Maxym</h1> <br /> <img src="~/Content/img/lab7MaxDB.png" alt="Alternate Text" style="margin-bottom:15px;"/><img src="~/Content/img/lab7MaxDB2.png" alt="Alternate Text" />
+        </div>
+
+        <div>
+            <h1>Moroz Vladyslav</h1> <br /> <img src="~/Content/img/lab7VladInfo.png" alt="Alternate Text" />
+        </div>
+
+        <div>
+            <h1>Tereshchenko Bohdan</h1> <br />
+            <img src="~/Content/img/lab7BohdanInfo.png" alt="Alternate Text" />
         </div>
     </div>
 
