--- a/LAB_7/Moroz Vladyslav/AudioLib_lab7/AudioLib_lab7/Views/Audio/Details.cshtml
+++ b/LAB_7/Moroz Vladyslav/AudioLib_lab7/AudioLib_lab7/Views/Audio/Details.cshtml
@@ -26,6 +26,14 @@
             @Html.DisplayFor(model => model.Author)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.SongLink)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SongLink)
+        </dd>
+
     </dl>
 </div>
 <p>
