--- a/LAB_7/Moroz Vladyslav/AudioLib_lab7/AudioLib_lab7/Views/Audio/Delete.cshtml
+++ b/LAB_7/Moroz Vladyslav/AudioLib_lab7/AudioLib_lab7/Views/Audio/Delete.cshtml
@@ -27,6 +27,14 @@
             @Html.DisplayFor(model => model.Author)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.SongLink)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SongLink)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
