--- a/LAB_7/Moroz Vladyslav/AudioLib_lab7/AudioLib_lab7/Views/Audio/Index.cshtml
+++ b/LAB_7/Moroz Vladyslav/AudioLib_lab7/AudioLib_lab7/Views/Audio/Index.cshtml
@@ -17,6 +17,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Author)
         </th>
+        <th>
+            Play
+        </th>
         <th></th>
     </tr>
 
@@ -28,6 +31,14 @@
         <td>
             @Html.DisplayFor(modelItem => item.Author)
         </td>
+        <td>
+            <button type="button">
+                <a href="@Html.DisplayFor(modelItem => item.SongLink)" target="_blank" onclick="window.open(this.href, 'mywin',
+'left=20,top=20,width=500,height=500,toolbar=1,resizable=0')">play</a>
+            </button>
+            
+        </td>
+
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
