--- a/LAB_7/Moroz Vladyslav/AudioLib_lab7/AudioLib_lab7/Views/Shared/_Layout.cshtml
+++ b/LAB_7/Moroz Vladyslav/AudioLib_lab7/AudioLib_lab7/Views/Shared/_Layout.cshtml
@@ -4,24 +4,58 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
+    <link type="text/css" rel="stylesheet" href="../../Content/Site.css" />
+
+
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+
+
+    <div class="slideshow-container">
+
+        <div class="mySlides fade">
+            <img src="../../Content/images/tsoy.jpg" style="width:100%">
+            <div class="text">Ві́ктор Ро́бертович Цой - перша радянська зірка молодіжної маскультури[8] та один із наймолодших лідерів радянського рок-н-ролу</div>
+        </div>
+
+        <div class="mySlides fade">
+            <<img src="../../Content/images/strykalo.jpg" style="width:100%">
+             <div class="text">Валентин Стрикало — український гурт, заснований 2010 року солістом Юрієм Капланом, який здобув популярність<br> після запису серії відеозвернень до зірок шоу-бізнесу від імені наївного провінційного хлопця «Валентина Стрикала з села Бурильцева»</div>
+        </div>
+
+        <div class="mySlides fade strykalo">
+            <img src="../../Content/images/elvis.jpg" style="width:100%">
+            <div class="text">Е́лвіс Ааро́н Пре́слі - лавнозвісний американський співак і актор. Один із найуспішніших музикантів XX століття.<br> Установив чимало досі не перевершених рекордів у царині звукозапису.</div>
+        </div>
+
+    </div>
+    <br>
+
+
+
+
+
+
+
+
+
+    <div class="navbar navbar-inverse navbar-fixed-top grey">
         <div class="container">
-            <div class="navbar-header">
+            <div class="navbar-header gain-center">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Site of brigada #6", "Index", "Audio", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Temopi music", "Index", "Audio", new { area = "" }, new { @class = "navbar-brand" })
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("User", "Index", "User")</li>
-                    <li>@Html.ActionLink("Login", "Login", "User")</li>
+            <div class="navbar-collapse collapse ">
+                <ul class="nav navbar-nav" >
+                    <li class="gain-center">@Html.ActionLink("User", "Index", "User")</li>
+                    <li class="gain-center">@Html.ActionLink("Login", "Login", "User")</li>
                 </ul>
             </div>
         </div>
@@ -30,12 +64,39 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <div class="main-info">
+                <br><br><h2>Temopi music</h2><br>
+                <p>
+                    "Temopi music" - інтернет-сервіс потокового аудіо, де ви цілком безкоштовно можете знайти музику, яка буде до смаку саме вам!<br>
+                </p><br><br>
+            </div>
+            <div class="footer-info">
+                <div class="contacts">
+                    <h3>КОНТАКТНА ІНФОРМАЦІЯ</h3>
+                    <div class="contact-info">
+                        <img src="../../Content/icons/phone.svg" alt="Phone icon" class="icon">
+                        <div class="contact-info-text" id="phones">
+                            <a href="tel:+38000000000">+380 (00) 000 00 00</a>
+                        </div>
+                    </div>
+                    <div class="contact-info">
+                        <img src="../../Content/icons/mail.svg" alt="E-mail icon" class="icon">
+                        <div class="contact-info-text" id="email">
+                            <a href="mailto:temopimusica@gmail.com">temopimusic@gmail.com</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </footer>
     </div>
+
+    <script src="../../Scripts/script.js"></script>
+
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
+
+
 </html>
